--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@graphql-tools/merge": "^8.4.0",
     "@graphql-tools/schema": "^9.0.17",
     "graphql": "^16.6.0",
-    "graphql-tag": "^2.12.6"
+    "graphql-tag": "^2.12.6",
+    "mongoose": "^7.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.15.11",
